--- a/src/gui/view/studentsPage.fxml
+++ b/src/gui/view/studentsPage.fxml
@@ -2,8 +2,13 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.TilePane?>
@@ -11,7 +16,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane prefHeight="355.0" prefWidth="844.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.StudentPageController">
+<BorderPane prefHeight="355.0" prefWidth="844.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <HBox alignment="CENTER_LEFT" prefHeight="79.0" prefWidth="844.0" spacing="10.0" style="-fx-border-color: black; -fx-border-width: 3; -fx-border-style: dotted; -fx-background-color: #ffea00;" BorderPane.alignment="CENTER">
          <children>
@@ -37,7 +42,7 @@
                <children>
                   <VBox alignment="CENTER_RIGHT" spacing="10.0" style="-fx-font-weight: bold;">
                      <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Faustas Anulis" />
+                        <Text fx:id="textName" strokeType="OUTSIDE" strokeWidth="0.0" />
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Computer Science" />
                      </children>
                   </VBox>
@@ -96,17 +101,36 @@
       </VBox>
    </left>
    <center>
-      <VBox alignment="TOP_CENTER" BorderPane.alignment="CENTER">
-         <children>
-            <Text fx:id="textMonth" strokeType="OUTSIDE" strokeWidth="0.0">
-               <font>
-                  <Font size="50.0" />
-               </font>
-            </Text>
-            <TilePane fx:id="tileCalendar" prefHeight="489.0" prefTileHeight="50.0" prefTileWidth="50.0" prefWidth="695.0">
-               <VBox.margin>
-                  <Insets left="10.0" top="10.0" />
-               </VBox.margin></TilePane>
-         </children></VBox>
+      <TabPane fx:id="tabPane" BorderPane.alignment="CENTER">
+         <tabs>
+            <Tab closable="false" text="Calendar">
+               <content>
+                  <VBox alignment="TOP_CENTER">
+                     <children>
+                        <Text fx:id="textMonth" strokeType="OUTSIDE" strokeWidth="0.0">
+                           <font>
+                              <Font size="50.0" />
+                           </font>
+                        </Text>
+                        <TilePane fx:id="tileCalendar" prefHeight="489.0" prefTileHeight="50.0" prefTileWidth="50.0" prefWidth="695.0">
+                           <VBox.margin>
+                              <Insets left="10.0" top="10.0" />
+                           </VBox.margin>
+                        </TilePane>
+                     </children>
+                  </VBox>
+               </content>
+            </Tab>
+            <Tab closable="false" text="Progress">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Button fx:id="btnAttendance" layoutX="201.0" layoutY="63.0" mnemonicParsing="false" text="PrintAttendance" />
+                        <TextField fx:id="idField" layoutX="44.0" layoutY="63.0" promptText="ID" />
+                     </children></AnchorPane>
+              </content>
+            </Tab>
+         </tabs>
+      </TabPane>
    </center>
 </BorderPane>
