--- a/src/gui/view/studentsPage.fxml
+++ b/src/gui/view/studentsPage.fxml
@@ -2,13 +2,9 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.TilePane?>
@@ -101,36 +97,36 @@
       </VBox>
    </left>
    <center>
-      <TabPane fx:id="tabPane" BorderPane.alignment="CENTER">
-         <tabs>
-            <Tab closable="false" text="Calendar">
-               <content>
-                  <VBox alignment="TOP_CENTER">
-                     <children>
-                        <Text fx:id="textMonth" strokeType="OUTSIDE" strokeWidth="0.0">
-                           <font>
-                              <Font size="50.0" />
-                           </font>
-                        </Text>
-                        <TilePane fx:id="tileCalendar" prefHeight="489.0" prefTileHeight="50.0" prefTileWidth="50.0" prefWidth="695.0">
-                           <VBox.margin>
-                              <Insets left="10.0" top="10.0" />
-                           </VBox.margin>
-                        </TilePane>
-                     </children>
-                  </VBox>
-               </content>
-            </Tab>
-            <Tab closable="false" text="Progress">
-              <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                     <children>
-                        <Button fx:id="btnAttendance" layoutX="201.0" layoutY="63.0" mnemonicParsing="false" text="PrintAttendance" />
-                        <TextField fx:id="idField" layoutX="44.0" layoutY="63.0" promptText="ID" />
-                     </children></AnchorPane>
-              </content>
-            </Tab>
-         </tabs>
-      </TabPane>
+      <BorderPane>
+         <center>
+            <VBox alignment="TOP_CENTER">
+               <children>
+                  <TilePane fx:id="tileCalendar" prefHeight="67.0" prefTileHeight="50.0" prefTileWidth="50.0" prefWidth="685.0">
+                     <VBox.margin>
+                        <Insets left="10.0" top="10.0" />
+                     </VBox.margin>
+                  </TilePane>
+               </children>
+            </VBox>
+         </center>
+         <top>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Text fx:id="textMonth" strokeType="OUTSIDE" strokeWidth="0.0">
+                     <font>
+                        <Font size="50.0" />
+                     </font>
+                  </Text>
+               </children>
+            </HBox>
+         </top>
+         <bottom>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+               <children>
+                  <PieChart fx:id="pieChart" />
+               </children>
+            </HBox>
+         </bottom>
+      </BorderPane>
    </center>
 </BorderPane>
