--- a/src/gui/view/studentsPage.fxml
+++ b/src/gui/view/studentsPage.fxml
@@ -13,100 +13,82 @@
 
 <BorderPane prefHeight="355.0" prefWidth="844.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.StudentPageController">
    <top>
-      <HBox alignment="CENTER_LEFT" prefHeight="79.0" prefWidth="844.0" spacing="10.0" style="-fx-border-color: black; -fx-border-width: 3; -fx-border-style: dotted; -fx-background-color: #ffea00;" BorderPane.alignment="CENTER">
-         <children>
-            <HBox alignment="CENTER">
-               <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: bold;" text="EASV">
-                     <font>
-                        <Font size="40.0" />
-                     </font>
-                  </Text>
-                  <HBox alignment="BOTTOM_CENTER">
-                     <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Attendance check">
-                           <font>
-                              <Font size="21.0" />
-                           </font>
-                        </Text>
-                     </children>
-                  </HBox>
-               </children>
+      <HBox alignment="CENTER_LEFT" prefHeight="79.0" prefWidth="844.0" spacing="10.0"
+            style="-fx-border-color: black; -fx-border-width: 3; -fx-border-style: dotted; -fx-background-color: #ffea00;"
+            BorderPane.alignment="CENTER">
+         <HBox alignment="CENTER">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: bold;" text="EASV">
+               <font>
+                  <Font size="40.0"/>
+               </font>
+            </Text>
+            <HBox alignment="BOTTOM_CENTER">
+               <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Attendance check">
+                  <font>
+                     <Font size="21.0"/>
+                  </font>
+               </Text>
             </HBox>
-            <HBox alignment="CENTER_RIGHT" prefHeight="73.0" prefWidth="687.0" HBox.hgrow="ALWAYS">
-               <children>
-                  <VBox alignment="CENTER_RIGHT" spacing="10.0" style="-fx-font-weight: bold;">
-                     <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Faustas Anulis" />
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Computer Science" />
-                     </children>
-                  </VBox>
-                  <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
-                     <children>
-                        <ImageView fitHeight="72.0" fitWidth="78.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../../images/student.jpg" />
-                           </image>
-                        </ImageView>
-                     </children>
-                  </VBox>
-               </children>
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-            </HBox>
-         </children>
+         </HBox>
+         <HBox alignment="CENTER_RIGHT" prefHeight="73.0" prefWidth="687.0" HBox.hgrow="ALWAYS">
+            <opaqueInsets>
+               <Insets/>
+            </opaqueInsets>
+            <VBox alignment="CENTER_RIGHT" spacing="10.0" style="-fx-font-weight: bold;">
+               <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Faustas Anulis"/>
+               <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Computer Science"/>
+            </VBox>
+            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+               <ImageView fitHeight="72.0" fitWidth="78.0" pickOnBounds="true" preserveRatio="true">
+                  <Image url="@../../images/student.jpg"/>
+               </ImageView>
+            </VBox>
+         </HBox>
       </HBox>
    </top>
    <left>
       <VBox style="-fx-background-color: #e6f2f5;" BorderPane.alignment="CENTER">
-         <children>
-            <HBox alignment="CENTER">
-               <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Months:">
-                     <font>
-                        <Font size="26.0" />
-                     </font>
-                  </Text>
-               </children>
-               <VBox.margin>
-                  <Insets bottom="10.0" top="10.0" />
-               </VBox.margin>
-               <opaqueInsets>
-                  <Insets left="5.0" />
-               </opaqueInsets>
-            </HBox>
-            <VBox alignment="TOP_CENTER" prefHeight="270.0" prefWidth="149.0" spacing="10.0">
-               <children>
-                  <JFXButton onAction="#actionMonthClick" text="January" />
-                  <JFXButton onAction="#actionMonthClick" text="February" />
-                  <JFXButton onAction="#actionMonthClick" text="March" />
-                  <JFXButton onAction="#actionMonthClick" text="April" />
-                  <JFXButton onAction="#actionMonthClick" text="May" />
-                  <JFXButton onAction="#actionMonthClick" text="June" />
-                  <JFXButton onAction="#actionMonthClick" text="July" />
-                  <JFXButton onAction="#actionMonthClick" text="August" />
-                  <JFXButton onAction="#actionMonthClick" text="September" />
-                  <JFXButton onAction="#actionMonthClick" text="October" />
-                  <JFXButton onAction="#actionMonthClick" text="November" />
-                  <JFXButton onAction="#actionMonthClick" text="December" />
-               </children>
-            </VBox>
-         </children>
+         <HBox alignment="CENTER">
+            <VBox.margin>
+               <Insets bottom="10.0" top="10.0"/>
+            </VBox.margin>
+            <opaqueInsets>
+               <Insets left="5.0"/>
+            </opaqueInsets>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Months:">
+               <font>
+                  <Font size="26.0"/>
+               </font>
+            </Text>
+         </HBox>
+         <VBox alignment="TOP_CENTER" prefHeight="270.0" prefWidth="149.0" spacing="10.0">
+            <JFXButton onAction="#actionMonthClick" text="January"/>
+            <JFXButton onAction="#actionMonthClick" text="February"/>
+            <JFXButton onAction="#actionMonthClick" text="March"/>
+            <JFXButton onAction="#actionMonthClick" text="April"/>
+            <JFXButton onAction="#actionMonthClick" text="May"/>
+            <JFXButton onAction="#actionMonthClick" text="June"/>
+            <JFXButton onAction="#actionMonthClick" text="July"/>
+            <JFXButton onAction="#actionMonthClick" text="August"/>
+            <JFXButton onAction="#actionMonthClick" text="September"/>
+            <JFXButton onAction="#actionMonthClick" text="October"/>
+            <JFXButton onAction="#actionMonthClick" text="November"/>
+            <JFXButton onAction="#actionMonthClick" text="December"/>
+         </VBox>
       </VBox>
    </left>
    <center>
       <VBox alignment="TOP_CENTER" BorderPane.alignment="CENTER">
-         <children>
-            <Text fx:id="textMonth" strokeType="OUTSIDE" strokeWidth="0.0">
-               <font>
-                  <Font size="50.0" />
-               </font>
-            </Text>
-            <TilePane fx:id="tileCalendar" prefHeight="489.0" prefTileHeight="50.0" prefTileWidth="50.0" prefWidth="695.0">
-               <VBox.margin>
-                  <Insets left="10.0" top="10.0" />
-               </VBox.margin></TilePane>
-         </children></VBox>
+         <Text fx:id="textMonth" strokeType="OUTSIDE" strokeWidth="0.0">
+            <font>
+               <Font size="50.0"/>
+            </font>
+         </Text>
+         <TilePane fx:id="tileCalendar" prefHeight="489.0" prefTileHeight="50.0" prefTileWidth="50.0" prefWidth="695.0">
+            <VBox.margin>
+               <Insets left="10.0" top="10.0"/>
+            </VBox.margin>
+         </TilePane>
+      </VBox>
    </center>
 </BorderPane>
