--- a/src/main/resources/view/userpage/studentPage.fxml
+++ b/src/main/resources/view/userpage/studentPage.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane prefHeight="593.0" prefWidth="844.0" style="-fx-border-color: black; -fx-border-width: 0;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.StudentPageController">
+<BorderPane prefHeight="593.0" prefWidth="844.0" style="-fx-border-color: black; -fx-border-width: 0;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.StudentPageController">
    <top>
       <HBox alignment="CENTER_LEFT" prefHeight="79.0" prefWidth="844.0" spacing="10.0" style="-fx-background-color: #92a8b1;" BorderPane.alignment="CENTER">
          <HBox alignment="CENTER">
@@ -23,19 +23,29 @@
                </ImageView>
             </children>
          </HBox>
-         <HBox alignment="CENTER_RIGHT" prefHeight="95.0" prefWidth="485.0" HBox.hgrow="ALWAYS">
+         <HBox alignment="BOTTOM_RIGHT" prefHeight="94.0" prefWidth="524.0" HBox.hgrow="ALWAYS">
             <opaqueInsets>
                <Insets />
             </opaqueInsets>
-            <VBox alignment="CENTER_RIGHT" spacing="10.0" style="-fx-font-weight: bold;">
-               <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Faustas Anulis" />
-               <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Computer Science" />
-            </VBox>
-            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
-               <ImageView fitHeight="72.0" fitWidth="78.0" pickOnBounds="true" preserveRatio="true">
-                  <Image url="@../../images/student.jpg" />
-               </ImageView>
-            </VBox>
+            <children>
+               <VBox alignment="BOTTOM_RIGHT" prefHeight="200.0" prefWidth="357.0">
+                  <children>
+                     <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Mantas Pasakarnis">
+                        <font>
+                           <Font size="23.0" />
+                        </font>
+                     </Text>
+                     <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Computer Science">
+                        <font>
+                           <Font name="System Bold" size="39.0" />
+                        </font>
+                     </Text>
+                  </children>
+                  <padding>
+                     <Insets right="5.0" />
+                  </padding>
+               </VBox>
+            </children>
          </HBox>
       </HBox>
    </top>
@@ -84,4 +94,11 @@
          </TilePane>
       </VBox>
    </center>
+   <bottom>
+      <HBox alignment="CENTER_RIGHT" BorderPane.alignment="CENTER">
+         <children>
+            <HBox alignment="BOTTOM_RIGHT" />
+         </children>
+      </HBox>
+   </bottom>
 </BorderPane>
