--- a/src/main/resources/view/userpage/teacherPage.fxml
+++ b/src/main/resources/view/userpage/teacherPage.fxml
@@ -1,66 +1,115 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.TeacherPageController">
-    <MenuBar layoutX="168.0" layoutY="38.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <Menu mnemonicParsing="false" text="File">
-            <MenuItem mnemonicParsing="false" onAction="#btnCreateNewClass" text="Create New Class" />
-            <MenuItem mnemonicParsing="false" onAction="#btnCreateNewStudent" text="Register New Student" />
-        </Menu>
-        <Menu mnemonicParsing="false" text="Edit">
-            <MenuItem mnemonicParsing="false" onAction="#btnEditClass" text="Edit Class" />
-            <MenuItem mnemonicParsing="false" onAction="#btnEditStudentsInfo" text="Edit Students Info" />
-        </Menu>
-        <Menu mnemonicParsing="false" text="Delete">
-            <MenuItem mnemonicParsing="false" onAction="#btnDeleteClass" text="Delete Class" />
-            <MenuItem mnemonicParsing="false" onAction="#btnDeleteStudent" text="Delete Student" />
-        </Menu>
-    </MenuBar>
-    <HBox layoutX="159.0" layoutY="107.0" minWidth="100.0" prefWidth="150.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="25.0" />
-    <BorderPane layoutX="150.0" layoutY="62.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0">
-        <center>
-          <TableView fx:id="studentListTable" BorderPane.alignment="CENTER" />
-        </center>
-        <left>
-            <VBox maxHeight="1.7976931348623157E308" minWidth="100.0" BorderPane.alignment="CENTER">
-            <TableView fx:id="classesList" minWidth="170.0" prefWidth="180.0" />
-            </VBox>
-        </left>
-        <bottom>
-            <FlowPane hgap="20.0" prefHeight="25.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-                <HBox prefHeight="25.0">
-                    <padding>
-                        <Insets left="20.0" />
-                    </padding>
-                    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Total % Attendance" />
-                    <Text fx:id="lblTotalPercentage" strokeType="OUTSIDE" strokeWidth="0.0" />
-                </HBox>
-                <HBox prefHeight="25.0">
-                    <padding>
-                        <Insets left="20.0" />
-                    </padding>
-                    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Missed Classes amount" />
-                    <Text fx:id="lblMissedClassCount" strokeType="OUTSIDE" strokeWidth="0.0" />
-                </HBox>
-                <HBox prefHeight="25.0">
-                    <padding>
-                        <Insets left="20.0" />
-                    </padding>
-                    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Amount of students not attended at all:" />
-                    <Text fx:id="lblNotAttendedAtAll" strokeType="OUTSIDE" strokeWidth="0.0" />
-                </HBox>
-            </FlowPane>
-        </bottom>
-    </BorderPane>
-</AnchorPane>
+<BorderPane prefHeight="654.0" prefWidth="1160.0" style="-fx-border-color: black; -fx-border-width: 0;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.StudentPageController">
+   <top>
+      <HBox alignment="CENTER_LEFT" prefHeight="79.0" prefWidth="844.0" spacing="10.0" style="-fx-background-color: #92a8b1;" BorderPane.alignment="CENTER">
+         <HBox alignment="CENTER">
+            <children>
+               <ImageView fitHeight="94.0" fitWidth="321.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                     <Image url="@../../images/EASV-no-bg.png" />
+                  </image>
+               </ImageView>
+            </children>
+         </HBox>
+         <HBox alignment="BOTTOM_RIGHT" prefHeight="94.0" prefWidth="524.0" HBox.hgrow="ALWAYS">
+            <opaqueInsets>
+               <Insets />
+            </opaqueInsets>
+            <children>
+               <VBox alignment="BOTTOM_RIGHT" prefHeight="200.0" prefWidth="357.0">
+                  <children>
+                     <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Mantas Pasakarnis">
+                        <font>
+                           <Font size="23.0" />
+                        </font>
+                     </Text>
+                     <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Computer Science">
+                        <font>
+                           <Font name="System Bold" size="39.0" />
+                        </font>
+                     </Text>
+                  </children>
+                  <padding>
+                     <Insets right="5.0" />
+                  </padding>
+               </VBox>
+            </children>
+         </HBox>
+      </HBox>
+   </top>
+   <left>
+      <VBox prefHeight="531.0" prefWidth="185.0" style="-fx-background-color: #e6f2f5;" BorderPane.alignment="CENTER">
+         <HBox alignment="CENTER">
+            <opaqueInsets>
+               <Insets left="5.0" />
+            </opaqueInsets>
+         </HBox>
+         <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+            <children>
+               <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Class:">
+                  <font>
+                     <Font size="26.0" />
+                  </font>
+               </Text>
+               <ChoiceBox prefWidth="150.0" />
+            </children>
+         </VBox>
+         <VBox alignment="TOP_CENTER" prefHeight="426.0" prefWidth="185.0" spacing="10.0" stylesheets="@../../stylesheets/months.css">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Months:">
+               <font>
+                  <Font size="26.0" />
+               </font>
+            </Text>
+            <JFXButton onAction="#actionMonthClick" text="January" />
+            <JFXButton onAction="#actionMonthClick" text="February" />
+            <JFXButton onAction="#actionMonthClick" text="March" />
+            <JFXButton onAction="#actionMonthClick" text="April" />
+            <JFXButton onAction="#actionMonthClick" text="May" />
+            <JFXButton onAction="#actionMonthClick" text="June" />
+            <JFXButton onAction="#actionMonthClick" text="July" />
+            <JFXButton onAction="#actionMonthClick" text="August" />
+            <JFXButton onAction="#actionMonthClick" text="September" />
+            <JFXButton onAction="#actionMonthClick" text="October" />
+            <JFXButton onAction="#actionMonthClick" text="November" />
+            <JFXButton onAction="#actionMonthClick" text="December" />
+            <padding>
+               <Insets bottom="10.0" />
+            </padding>
+         </VBox>
+      </VBox>
+   </left>
+   <center>
+      <VBox alignment="TOP_CENTER" prefHeight="522.0" prefWidth="694.0" BorderPane.alignment="CENTER">
+         <Text fx:id="textMonth" strokeType="OUTSIDE" strokeWidth="0.0">
+            <font>
+               <Font size="50.0" />
+            </font>
+         </Text>
+         <TilePane fx:id="tileCalendar" prefHeight="447.0" prefTileHeight="50.0" prefTileWidth="50.0" prefWidth="683.0">
+            <VBox.margin>
+               <Insets left="10.0" top="10.0" />
+            </VBox.margin>
+         </TilePane>
+      </VBox>
+   </center>
+   <bottom>
+      <HBox alignment="CENTER_RIGHT" BorderPane.alignment="CENTER">
+         <children>
+            <HBox alignment="BOTTOM_RIGHT" />
+         </children>
+      </HBox>
+   </bottom>
+</BorderPane>
