--- a/src/main/resources/view/userpage/TeacherPage.fxml
+++ b/src/main/resources/view/userpage/TeacherPage.fxml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane prefHeight="654.0" prefWidth="1160.0" style="-fx-border-color: black; -fx-border-width: 0;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.StudentPageController">
+<BorderPane prefHeight="654.0" prefWidth="1160.0" style="-fx-border-color: black; -fx-border-width: 0;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.StudentPageController">
    <top>
       <HBox alignment="CENTER_LEFT" prefHeight="79.0" prefWidth="844.0" spacing="10.0" style="-fx-background-color: #92a8b1;" BorderPane.alignment="CENTER">
          <HBox alignment="CENTER">
@@ -51,65 +52,58 @@
       </HBox>
    </top>
    <left>
-      <VBox prefHeight="531.0" prefWidth="185.0" style="-fx-background-color: #e6f2f5;" BorderPane.alignment="CENTER">
-         <HBox alignment="CENTER">
-            <opaqueInsets>
-               <Insets left="5.0" />
-            </opaqueInsets>
-         </HBox>
-         <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+      <VBox prefHeight="569.0" prefWidth="360.0" style="-fx-background-color: #e6f2f5;" BorderPane.alignment="CENTER">
+         <VBox alignment="CENTER" prefHeight="91.0" prefWidth="360.0">
             <children>
-               <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Class:">
+               <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Month:" wrappingWidth="96.3203125">
                   <font>
-                     <Font size="26.0" />
+                     <Font size="30.0" />
                   </font>
                </Text>
                <ChoiceBox prefWidth="150.0" />
+               <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Classes:">
+                  <font>
+                     <Font size="30.0" />
+                  </font>
+               </Text>
             </children>
          </VBox>
-         <VBox alignment="TOP_CENTER" prefHeight="426.0" prefWidth="185.0" spacing="10.0" stylesheets="@../../stylesheets/months.css">
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Months:">
-               <font>
-                  <Font size="26.0" />
-               </font>
-            </Text>
-            <JFXButton onAction="#actionMonthClick" text="January" />
-            <JFXButton onAction="#actionMonthClick" text="February" />
-            <JFXButton onAction="#actionMonthClick" text="March" />
-            <JFXButton onAction="#actionMonthClick" text="April" />
-            <JFXButton onAction="#actionMonthClick" text="May" />
-            <JFXButton onAction="#actionMonthClick" text="June" />
-            <JFXButton onAction="#actionMonthClick" text="July" />
-            <JFXButton onAction="#actionMonthClick" text="August" />
-            <JFXButton onAction="#actionMonthClick" text="September" />
-            <JFXButton onAction="#actionMonthClick" text="October" />
-            <JFXButton onAction="#actionMonthClick" text="November" />
-            <JFXButton onAction="#actionMonthClick" text="December" />
-            <padding>
-               <Insets bottom="10.0" />
-            </padding>
-         </VBox>
+         <HBox prefHeight="486.0" prefWidth="360.0">
+            <children>
+               <VBox prefHeight="452.0" prefWidth="360.0">
+                  <children>
+                     <ListView prefHeight="418.0" prefWidth="360.0" />
+                     <HBox alignment="CENTER" prefHeight="86.0" prefWidth="360.0">
+                        <children>
+                           <Button mnemonicParsing="false" text="Button" />
+                           <Button mnemonicParsing="false" text="Button" />
+                           <Button mnemonicParsing="false" text="Button" />
+                        </children>
+                     </HBox>
+                  </children>
+               </VBox>
+            </children>
+         </HBox>
       </VBox>
    </left>
    <center>
       <VBox alignment="TOP_CENTER" prefHeight="522.0" prefWidth="694.0" BorderPane.alignment="CENTER">
-         <Text fx:id="textMonth" strokeType="OUTSIDE" strokeWidth="0.0">
+         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="List of students" wrappingWidth="234.25048828125">
             <font>
-               <Font size="50.0" />
+               <Font size="35.0" />
             </font>
          </Text>
-         <TilePane fx:id="tileCalendar" prefHeight="447.0" prefTileHeight="50.0" prefTileWidth="50.0" prefWidth="683.0">
-            <VBox.margin>
-               <Insets left="10.0" top="10.0" />
-            </VBox.margin>
-         </TilePane>
+         <TableView prefHeight="495.0" prefWidth="800.0" />
+         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+            <children>
+               <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Attended classe:  ">
+                  <HBox.margin>
+                     <Insets right="100.0" />
+                  </HBox.margin>
+               </Text>
+               <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Missed classe:  " />
+            </children>
+         </HBox>
       </VBox>
    </center>
-   <bottom>
-      <HBox alignment="CENTER_RIGHT" BorderPane.alignment="CENTER">
-         <children>
-            <HBox alignment="BOTTOM_RIGHT" />
-         </children>
-      </HBox>
-   </bottom>
 </BorderPane>
