--- a/src/main/resources/view/userpage/TeacherPage.fxml
+++ b/src/main/resources/view/userpage/TeacherPage.fxml
@@ -3,8 +3,8 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane prefHeight="654.0" prefWidth="1160.0" style="-fx-border-color: black; -fx-border-width: 0;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.StudentPageController">
+<BorderPane prefHeight="654.0" prefWidth="1160.0" style="-fx-border-color: black; -fx-border-width: 0;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.TeacherPageController">
    <top>
       <HBox alignment="CENTER_LEFT" prefHeight="79.0" prefWidth="844.0" spacing="10.0" style="-fx-background-color: #92a8b1;" BorderPane.alignment="CENTER">
          <HBox alignment="CENTER">
@@ -53,7 +53,34 @@
    </top>
    <left>
       <VBox prefHeight="569.0" prefWidth="360.0" style="-fx-background-color: #e6f2f5;" BorderPane.alignment="CENTER">
-         <VBox alignment="CENTER" prefHeight="91.0" prefWidth="360.0">
+         <VBox alignment="CENTER" prefHeight="452.0" prefWidth="298.0">
+            <children>
+               <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Classes:">
+                  <font>
+                     <Font size="30.0" />
+                  </font>
+               </Text>
+               <ListView prefHeight="451.0" prefWidth="360.0" />
+            </children>
+         </VBox>
+         <VBox alignment="CENTER" prefHeight="270.0" prefWidth="360.0" spacing="10.0">
+            <children>
+               <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Add Schedule:" />
+               <DatePicker fx:id="datePicker" />
+               <Button mnemonicParsing="false" onAction="#submitDate" text="Submit" />
+            </children>
+         </VBox>
+      </VBox>
+   </left>
+   <center>
+      <VBox alignment="TOP_CENTER" prefHeight="377.0" prefWidth="800.0" BorderPane.alignment="CENTER">
+         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="List of students" wrappingWidth="234.25048828125">
+            <font>
+               <Font size="30.0" />
+            </font>
+         </Text>
+         <ListView prefHeight="198.0" prefWidth="800.0" />
+         <HBox alignment="CENTER" prefHeight="68.0" prefWidth="800.0">
             <children>
                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Month:" wrappingWidth="96.3203125">
                   <font>
@@ -61,47 +88,6 @@
                   </font>
                </Text>
                <ChoiceBox prefWidth="150.0" />
-               <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Classes:">
-                  <font>
-                     <Font size="30.0" />
-                  </font>
-               </Text>
-            </children>
-         </VBox>
-         <HBox prefHeight="486.0" prefWidth="360.0">
-            <children>
-               <VBox prefHeight="452.0" prefWidth="360.0">
-                  <children>
-                     <ListView prefHeight="418.0" prefWidth="360.0" />
-                     <HBox alignment="CENTER" prefHeight="86.0" prefWidth="360.0">
-                        <children>
-                           <Button mnemonicParsing="false" text="Button" />
-                           <Button mnemonicParsing="false" text="Button" />
-                           <Button mnemonicParsing="false" text="Button" />
-                        </children>
-                     </HBox>
-                  </children>
-               </VBox>
-            </children>
-         </HBox>
-      </VBox>
-   </left>
-   <center>
-      <VBox alignment="TOP_CENTER" prefHeight="522.0" prefWidth="694.0" BorderPane.alignment="CENTER">
-         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="List of students" wrappingWidth="234.25048828125">
-            <font>
-               <Font size="35.0" />
-            </font>
-         </Text>
-         <TableView prefHeight="495.0" prefWidth="800.0" />
-         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-            <children>
-               <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Attended classe:  ">
-                  <HBox.margin>
-                     <Insets right="100.0" />
-                  </HBox.margin>
-               </Text>
-               <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Missed classe:  " />
             </children>
          </HBox>
       </VBox>
